lab5/gem5/parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> decls
Rule 2     empty -> <empty>
Rule 3     decls -> declsx
Rule 4     declsx -> decl declsx
Rule 5     declsx -> empty
Rule 6     decl -> PROTOCOL STRING SEMI
Rule 7     decl -> INCLUDE STRING SEMI
Rule 8     decl -> MACHINE ( ident pairs ) : params { decls }
Rule 9     decl -> ACTION ( ident pairs ) statements
Rule 10    decl -> IN_PORT ( ident , type , var pairs ) statements
Rule 11    decl -> OUT_PORT ( ident , type , var pairs ) SEMI
Rule 12    decl -> TRANS ( idents , idents , ident pairs ) idents
Rule 13    decl -> TRANS ( idents , idents pairs ) idents
Rule 14    decl -> EXTERN_TYPE ( type pairs ) SEMI
Rule 15    decl -> GLOBAL ( type pairs ) { type_members }
Rule 16    decl -> STRUCT ( type pairs ) { type_members }
Rule 17    decl -> ENUM ( type pairs ) { type_enums }
Rule 18    decl -> STATE_DECL ( type pairs ) { type_states }
Rule 19    decl -> type ident pairs SEMI
Rule 20    decl -> void ident ( params ) pairs SEMI
Rule 21    decl -> type ident ( params ) pairs SEMI
Rule 22    decl -> void ident ( params ) pairs statements
Rule 23    decl -> type ident ( params ) pairs statements
Rule 24    type_members -> type_member type_members
Rule 25    type_members -> empty
Rule 26    type_member -> type_or_void ident ( types ) pairs SEMI
Rule 27    type_member -> type_or_void ident pairs SEMI
Rule 28    type_member -> type_or_void ident ASSIGN expr SEMI
Rule 29    type_enums -> type_enum type_enums
Rule 30    type_enums -> empty
Rule 31    type_enum -> ident pairs SEMI
Rule 32    type_states -> type_state type_states
Rule 33    type_states -> empty
Rule 34    type_state -> ident , enumeration pairs SEMI
Rule 35    types -> type , types
Rule 36    types -> type
Rule 37    types -> empty
Rule 38    typestr -> typestr DOUBLE_COLON ident
Rule 39    typestr -> ident
Rule 40    type -> typestr
Rule 41    void -> VOID
Rule 42    type_or_void -> type
Rule 43    type_or_void -> void
Rule 44    params -> param , params
Rule 45    params -> param
Rule 46    params -> empty
Rule 47    param -> type ident
Rule 48    param -> type STAR ident
Rule 49    param -> type STAR ident = STRING
Rule 50    param -> type ident = NUMBER
Rule 51    param -> type ident = LIT_BOOL
Rule 52    param -> type ident = STRING
Rule 53    idents -> { identx }
Rule 54    idents -> ident
Rule 55    identx -> ident SEMI identx
Rule 56    identx -> ident , identx
Rule 57    identx -> ident identx
Rule 58    identx -> empty
Rule 59    ident -> IDENT
Rule 60    pairs -> , pairsx
Rule 61    pairs -> empty
Rule 62    pairsx -> pair , pairsx
Rule 63    pairsx -> pair
Rule 64    pair -> ident = STRING
Rule 65    pair -> ident = ident
Rule 66    pair -> ident = NUMBER
Rule 67    pair -> STRING
Rule 68    statements -> { statements_inner }
Rule 69    statements -> { }
Rule 70    statements_inner -> statement statements_inner
Rule 71    statements_inner -> statement
Rule 72    exprs -> expr , exprs
Rule 73    exprs -> expr
Rule 74    exprs -> empty
Rule 75    statement -> expr SEMI
Rule 76    statement -> expr ASSIGN expr SEMI
Rule 77    statement -> ENQUEUE ( var , type pairs ) statements
Rule 78    statement -> STALL_AND_WAIT ( var , var ) SEMI
Rule 79    statement -> PEEK ( var , type pairs ) statements
Rule 80    statement -> COPY_HEAD ( var , var pairs ) SEMI
Rule 81    statement -> CHECK_ALLOCATE ( var ) SEMI
Rule 82    statement -> CHECK_STOP_SLOTS ( var , STRING , STRING ) SEMI
Rule 83    aexpr -> STATIC_CAST ( type , expr )
Rule 84    aexpr -> STATIC_CAST ( type , STRING , expr )
Rule 85    statement -> RETURN expr SEMI
Rule 86    statement -> if_statement
Rule 87    if_statement -> IF ( expr ) statements
Rule 88    if_statement -> IF ( expr ) statements ELSE statements
Rule 89    if_statement -> IF ( expr ) statements ELSE if_statement
Rule 90    aexpr -> var
Rule 91    aexpr -> type ident
Rule 92    aexpr -> literal
Rule 93    aexpr -> enumeration
Rule 94    aexpr -> ident ( exprs )
Rule 95    aexpr -> NEW type
Rule 96    aexpr -> OOD
Rule 97    aexpr -> THIS DOT var [ expr ] DOT var DOT ident ( exprs )
Rule 98    aexpr -> THIS DOT var [ expr ] DOT var DOT field
Rule 99    aexpr -> CHIP [ expr ] DOT var [ expr ] DOT var DOT ident ( exprs )
Rule 100   aexpr -> CHIP [ expr ] DOT var [ expr ] DOT var DOT field
Rule 101   aexpr -> aexpr DOT ident
Rule 102   aexpr -> aexpr DOT ident ( exprs )
Rule 103   aexpr -> aexpr [ exprs ]
Rule 104   aexpr -> type DOUBLE_COLON ident ( exprs )
Rule 105   expr -> aexpr
Rule 106   expr -> expr STAR expr
Rule 107   expr -> expr SLASH expr
Rule 108   expr -> expr PLUS expr
Rule 109   expr -> expr DASH expr
Rule 110   expr -> expr LT expr
Rule 111   expr -> expr GT expr
Rule 112   expr -> expr LE expr
Rule 113   expr -> expr GE expr
Rule 114   expr -> expr EQ expr
Rule 115   expr -> expr NE expr
Rule 116   expr -> expr AND expr
Rule 117   expr -> expr OR expr
Rule 118   expr -> expr RIGHTSHIFT expr
Rule 119   expr -> expr LEFTSHIFT expr
Rule 120   expr -> NOT expr
Rule 121   expr -> DASH expr
Rule 122   aexpr -> ( expr )
Rule 123   aexpr -> IS_VALID ( var )
Rule 124   aexpr -> IS_INVALID ( var )
Rule 125   literal -> STRING
Rule 126   literal -> NUMBER
Rule 127   literal -> FLOATNUMBER
Rule 128   literal -> LIT_BOOL
Rule 129   enumeration -> ident : ident
Rule 130   var -> ident
Rule 131   field -> ident

Terminals, with rules where they appear

(                    : 8 9 10 11 12 13 14 15 16 17 18 20 21 22 23 26 77 78 79 80 81 82 83 84 87 88 89 94 97 99 102 104 122 123 124
)                    : 8 9 10 11 12 13 14 15 16 17 18 20 21 22 23 26 77 78 79 80 81 82 83 84 87 88 89 94 97 99 102 104 122 123 124
,                    : 10 10 11 11 12 12 13 34 35 44 56 60 62 72 77 78 79 80 82 82 83 84 84
:                    : 8 129
=                    : 49 50 51 52 64 65 66
ACTION               : 9
AND                  : 116
ASSIGN               : 28 76
CHECK_ALLOCATE       : 81
CHECK_STOP_SLOTS     : 82
CHIP                 : 99 100
COPY_HEAD            : 80
DASH                 : 109 121
DOT                  : 97 97 97 98 98 98 99 99 99 100 100 100 101 102
DOUBLE_COLON         : 38 104
ELSE                 : 88 89
ENQUEUE              : 77
ENUM                 : 17
EQ                   : 114
EXTERN_TYPE          : 14
FLOATNUMBER          : 127
GE                   : 113
GLOBAL               : 15
GT                   : 111
IDENT                : 59
IF                   : 87 88 89
INCLUDE              : 7
IN_PORT              : 10
IS_INVALID           : 124
IS_VALID             : 123
LE                   : 112
LEFTSHIFT            : 119
LIT_BOOL             : 51 128
LT                   : 110
MACHINE              : 8
NE                   : 115
NEW                  : 95
NOT                  : 120
NUMBER               : 50 66 126
OOD                  : 96
OR                   : 117
OUT_PORT             : 11
PEEK                 : 79
PLUS                 : 108
PROTOCOL             : 6
RETURN               : 85
RIGHTSHIFT           : 118
SEMI                 : 6 7 11 14 19 20 21 26 27 28 31 34 55 75 76 78 80 81 82 85
SLASH                : 107
STALL_AND_WAIT       : 78
STAR                 : 48 49 106
STATE_DECL           : 18
STATIC_CAST          : 83 84
STRING               : 6 7 49 52 64 67 82 82 84 125
STRUCT               : 16
THIS                 : 97 98
TRANS                : 12 13
VOID                 : 41
[                    : 97 98 99 99 100 100 103
]                    : 97 98 99 99 100 100 103
error                : 
{                    : 8 15 16 17 18 53 68 69
}                    : 8 15 16 17 18 53 68 69

Nonterminals, with rules where they appear

aexpr                : 101 102 103 105
decl                 : 4
decls                : 1 8
declsx               : 3 4
empty                : 5 25 30 33 37 46 58 61 74
enumeration          : 34 93
expr                 : 28 72 73 75 76 76 83 84 85 87 88 89 97 98 99 99 100 100 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 121 122
exprs                : 72 94 97 99 102 103 104
field                : 98 100
file                 : 0
ident                : 8 9 10 11 12 19 20 21 22 23 26 27 28 31 34 38 39 47 48 49 50 51 52 54 55 56 57 64 65 65 66 91 94 97 99 101 102 104 129 129 130 131
idents               : 12 12 12 13 13 13
identx               : 53 55 56 57
if_statement         : 86 89
literal              : 92
pair                 : 62 63
pairs                : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 26 27 31 34 77 79 80
pairsx               : 60 62
param                : 44 45
params               : 8 20 21 22 23 44
statement            : 70 71
statements           : 9 10 22 23 77 79 87 88 88 89
statements_inner     : 68 70
type                 : 10 11 14 15 16 17 18 19 21 23 35 36 42 47 48 49 50 51 52 77 79 83 84 91 95 104
type_enum            : 29
type_enums           : 17 29
type_member          : 24
type_members         : 15 16 24
type_or_void         : 26 27 28
type_state           : 32
type_states          : 18 32
types                : 26 35
typestr              : 38 40
var                  : 10 11 77 78 78 79 80 80 81 82 90 97 97 98 98 99 99 100 100 123 124
void                 : 20 22 43

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . decls
    (3) decls -> . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( ident pairs ) : params { decls }
    (9) decl -> . ACTION ( ident pairs ) statements
    (10) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (11) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (12) decl -> . TRANS ( idents , idents , ident pairs ) idents
    (13) decl -> . TRANS ( idents , idents pairs ) idents
    (14) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (15) decl -> . GLOBAL ( type pairs ) { type_members }
    (16) decl -> . STRUCT ( type pairs ) { type_members }
    (17) decl -> . ENUM ( type pairs ) { type_enums }
    (18) decl -> . STATE_DECL ( type pairs ) { type_states }
    (19) decl -> . type ident pairs SEMI
    (20) decl -> . void ident ( params ) pairs SEMI
    (21) decl -> . type ident ( params ) pairs SEMI
    (22) decl -> . void ident ( params ) pairs statements
    (23) decl -> . type ident ( params ) pairs statements
    (2) empty -> .
    (40) type -> . typestr
    (41) void -> . VOID
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    PROTOCOL        shift and go to state 12
    INCLUDE         shift and go to state 18
    MACHINE         shift and go to state 15
    ACTION          shift and go to state 8
    IN_PORT         shift and go to state 23
    OUT_PORT        shift and go to state 7
    TRANS           shift and go to state 6
    EXTERN_TYPE     shift and go to state 16
    GLOBAL          shift and go to state 3
    STRUCT          shift and go to state 20
    ENUM            shift and go to state 14
    STATE_DECL      shift and go to state 21
    $end            reduce using rule 2 (empty -> .)
    VOID            shift and go to state 2
    IDENT           shift and go to state 4

    decl                           shift and go to state 1
    ident                          shift and go to state 19
    void                           shift and go to state 13
    declsx                         shift and go to state 11
    file                           shift and go to state 5
    decls                          shift and go to state 22
    type                           shift and go to state 9
    typestr                        shift and go to state 17
    empty                          shift and go to state 10

state 1

    (4) declsx -> decl . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( ident pairs ) : params { decls }
    (9) decl -> . ACTION ( ident pairs ) statements
    (10) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (11) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (12) decl -> . TRANS ( idents , idents , ident pairs ) idents
    (13) decl -> . TRANS ( idents , idents pairs ) idents
    (14) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (15) decl -> . GLOBAL ( type pairs ) { type_members }
    (16) decl -> . STRUCT ( type pairs ) { type_members }
    (17) decl -> . ENUM ( type pairs ) { type_enums }
    (18) decl -> . STATE_DECL ( type pairs ) { type_states }
    (19) decl -> . type ident pairs SEMI
    (20) decl -> . void ident ( params ) pairs SEMI
    (21) decl -> . type ident ( params ) pairs SEMI
    (22) decl -> . void ident ( params ) pairs statements
    (23) decl -> . type ident ( params ) pairs statements
    (2) empty -> .
    (40) type -> . typestr
    (41) void -> . VOID
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    PROTOCOL        shift and go to state 12
    INCLUDE         shift and go to state 18
    MACHINE         shift and go to state 15
    ACTION          shift and go to state 8
    IN_PORT         shift and go to state 23
    OUT_PORT        shift and go to state 7
    TRANS           shift and go to state 6
    EXTERN_TYPE     shift and go to state 16
    GLOBAL          shift and go to state 3
    STRUCT          shift and go to state 20
    ENUM            shift and go to state 14
    STATE_DECL      shift and go to state 21
    $end            reduce using rule 2 (empty -> .)
    }               reduce using rule 2 (empty -> .)
    VOID            shift and go to state 2
    IDENT           shift and go to state 4

    decl                           shift and go to state 1
    ident                          shift and go to state 19
    void                           shift and go to state 13
    declsx                         shift and go to state 24
    type                           shift and go to state 9
    typestr                        shift and go to state 17
    empty                          shift and go to state 10

state 2

    (41) void -> VOID .

    IDENT           reduce using rule 41 (void -> VOID .)


state 3

    (15) decl -> GLOBAL . ( type pairs ) { type_members }

    (               shift and go to state 25


state 4

    (59) ident -> IDENT .

    SEMI            reduce using rule 59 (ident -> IDENT .)
    ,               reduce using rule 59 (ident -> IDENT .)
    IDENT           reduce using rule 59 (ident -> IDENT .)
    }               reduce using rule 59 (ident -> IDENT .)
    (               reduce using rule 59 (ident -> IDENT .)
    :               reduce using rule 59 (ident -> IDENT .)
    DOT             reduce using rule 59 (ident -> IDENT .)
    [               reduce using rule 59 (ident -> IDENT .)
    STAR            reduce using rule 59 (ident -> IDENT .)
    SLASH           reduce using rule 59 (ident -> IDENT .)
    PLUS            reduce using rule 59 (ident -> IDENT .)
    DASH            reduce using rule 59 (ident -> IDENT .)
    LT              reduce using rule 59 (ident -> IDENT .)
    GT              reduce using rule 59 (ident -> IDENT .)
    LE              reduce using rule 59 (ident -> IDENT .)
    GE              reduce using rule 59 (ident -> IDENT .)
    EQ              reduce using rule 59 (ident -> IDENT .)
    NE              reduce using rule 59 (ident -> IDENT .)
    AND             reduce using rule 59 (ident -> IDENT .)
    OR              reduce using rule 59 (ident -> IDENT .)
    RIGHTSHIFT      reduce using rule 59 (ident -> IDENT .)
    LEFTSHIFT       reduce using rule 59 (ident -> IDENT .)
    ]               reduce using rule 59 (ident -> IDENT .)
    DOUBLE_COLON    reduce using rule 59 (ident -> IDENT .)
    ASSIGN          reduce using rule 59 (ident -> IDENT .)
    )               reduce using rule 59 (ident -> IDENT .)
    =               reduce using rule 59 (ident -> IDENT .)
    {               reduce using rule 59 (ident -> IDENT .)
    PROTOCOL        reduce using rule 59 (ident -> IDENT .)
    INCLUDE         reduce using rule 59 (ident -> IDENT .)
    MACHINE         reduce using rule 59 (ident -> IDENT .)
    ACTION          reduce using rule 59 (ident -> IDENT .)
    IN_PORT         reduce using rule 59 (ident -> IDENT .)
    OUT_PORT        reduce using rule 59 (ident -> IDENT .)
    TRANS           reduce using rule 59 (ident -> IDENT .)
    EXTERN_TYPE     reduce using rule 59 (ident -> IDENT .)
    GLOBAL          reduce using rule 59 (ident -> IDENT .)
    STRUCT          reduce using rule 59 (ident -> IDENT .)
    ENUM            reduce using rule 59 (ident -> IDENT .)
    STATE_DECL      reduce using rule 59 (ident -> IDENT .)
    VOID            reduce using rule 59 (ident -> IDENT .)
    $end            reduce using rule 59 (ident -> IDENT .)


state 5

    (0) S' -> file .



state 6

    (12) decl -> TRANS . ( idents , idents , ident pairs ) idents
    (13) decl -> TRANS . ( idents , idents pairs ) idents

    (               shift and go to state 26


state 7

    (11) decl -> OUT_PORT . ( ident , type , var pairs ) SEMI

    (               shift and go to state 27


state 8

    (9) decl -> ACTION . ( ident pairs ) statements

    (               shift and go to state 28


state 9

    (19) decl -> type . ident pairs SEMI
    (21) decl -> type . ident ( params ) pairs SEMI
    (23) decl -> type . ident ( params ) pairs statements
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 29

state 10

    (5) declsx -> empty .

    }               reduce using rule 5 (declsx -> empty .)
    $end            reduce using rule 5 (declsx -> empty .)


state 11

    (3) decls -> declsx .

    }               reduce using rule 3 (decls -> declsx .)
    $end            reduce using rule 3 (decls -> declsx .)


state 12

    (6) decl -> PROTOCOL . STRING SEMI

    STRING          shift and go to state 30


state 13

    (20) decl -> void . ident ( params ) pairs SEMI
    (22) decl -> void . ident ( params ) pairs statements
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 31

state 14

    (17) decl -> ENUM . ( type pairs ) { type_enums }

    (               shift and go to state 32


state 15

    (8) decl -> MACHINE . ( ident pairs ) : params { decls }

    (               shift and go to state 33


state 16

    (14) decl -> EXTERN_TYPE . ( type pairs ) SEMI

    (               shift and go to state 34


state 17

    (40) type -> typestr .
    (38) typestr -> typestr . DOUBLE_COLON ident

  ! shift/reduce conflict for DOUBLE_COLON resolved as shift
    IDENT           reduce using rule 40 (type -> typestr .)
    ,               reduce using rule 40 (type -> typestr .)
    )               reduce using rule 40 (type -> typestr .)
    STAR            reduce using rule 40 (type -> typestr .)
    DOT             reduce using rule 40 (type -> typestr .)
    [               reduce using rule 40 (type -> typestr .)
    SEMI            reduce using rule 40 (type -> typestr .)
    ASSIGN          reduce using rule 40 (type -> typestr .)
    SLASH           reduce using rule 40 (type -> typestr .)
    PLUS            reduce using rule 40 (type -> typestr .)
    DASH            reduce using rule 40 (type -> typestr .)
    LT              reduce using rule 40 (type -> typestr .)
    GT              reduce using rule 40 (type -> typestr .)
    LE              reduce using rule 40 (type -> typestr .)
    GE              reduce using rule 40 (type -> typestr .)
    EQ              reduce using rule 40 (type -> typestr .)
    NE              reduce using rule 40 (type -> typestr .)
    AND             reduce using rule 40 (type -> typestr .)
    OR              reduce using rule 40 (type -> typestr .)
    RIGHTSHIFT      reduce using rule 40 (type -> typestr .)
    LEFTSHIFT       reduce using rule 40 (type -> typestr .)
    ]               reduce using rule 40 (type -> typestr .)
    DOUBLE_COLON    shift and go to state 35

  ! DOUBLE_COLON    [ reduce using rule 40 (type -> typestr .) ]


state 18

    (7) decl -> INCLUDE . STRING SEMI

    STRING          shift and go to state 36


state 19

    (39) typestr -> ident .

    DOUBLE_COLON    reduce using rule 39 (typestr -> ident .)
    ,               reduce using rule 39 (typestr -> ident .)
    IDENT           reduce using rule 39 (typestr -> ident .)
    STAR            reduce using rule 39 (typestr -> ident .)
    )               reduce using rule 39 (typestr -> ident .)
    DOT             reduce using rule 39 (typestr -> ident .)
    [               reduce using rule 39 (typestr -> ident .)
    SEMI            reduce using rule 39 (typestr -> ident .)
    ASSIGN          reduce using rule 39 (typestr -> ident .)
    SLASH           reduce using rule 39 (typestr -> ident .)
    PLUS            reduce using rule 39 (typestr -> ident .)
    DASH            reduce using rule 39 (typestr -> ident .)
    LT              reduce using rule 39 (typestr -> ident .)
    GT              reduce using rule 39 (typestr -> ident .)
    LE              reduce using rule 39 (typestr -> ident .)
    GE              reduce using rule 39 (typestr -> ident .)
    EQ              reduce using rule 39 (typestr -> ident .)
    NE              reduce using rule 39 (typestr -> ident .)
    AND             reduce using rule 39 (typestr -> ident .)
    OR              reduce using rule 39 (typestr -> ident .)
    RIGHTSHIFT      reduce using rule 39 (typestr -> ident .)
    LEFTSHIFT       reduce using rule 39 (typestr -> ident .)
    ]               reduce using rule 39 (typestr -> ident .)


state 20

    (16) decl -> STRUCT . ( type pairs ) { type_members }

    (               shift and go to state 37


state 21

    (18) decl -> STATE_DECL . ( type pairs ) { type_states }

    (               shift and go to state 38


state 22

    (1) file -> decls .

    $end            reduce using rule 1 (file -> decls .)


state 23

    (10) decl -> IN_PORT . ( ident , type , var pairs ) statements

    (               shift and go to state 39


state 24

    (4) declsx -> decl declsx .

    }               reduce using rule 4 (declsx -> decl declsx .)
    $end            reduce using rule 4 (declsx -> decl declsx .)


state 25

    (15) decl -> GLOBAL ( . type pairs ) { type_members }
    (40) type -> . typestr
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 19
    type                           shift and go to state 40
    typestr                        shift and go to state 17

state 26

    (12) decl -> TRANS ( . idents , idents , ident pairs ) idents
    (13) decl -> TRANS ( . idents , idents pairs ) idents
    (53) idents -> . { identx }
    (54) idents -> . ident
    (59) ident -> . IDENT

    {               shift and go to state 43
    IDENT           shift and go to state 4

    ident                          shift and go to state 41
    idents                         shift and go to state 42

state 27

    (11) decl -> OUT_PORT ( . ident , type , var pairs ) SEMI
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 44

state 28

    (9) decl -> ACTION ( . ident pairs ) statements
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 45

state 29

    (19) decl -> type ident . pairs SEMI
    (21) decl -> type ident . ( params ) pairs SEMI
    (23) decl -> type ident . ( params ) pairs statements
    (60) pairs -> . , pairsx
    (61) pairs -> . empty
    (2) empty -> .

    (               shift and go to state 47
    ,               shift and go to state 48
    SEMI            reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 46
    empty                          shift and go to state 49

state 30

    (6) decl -> PROTOCOL STRING . SEMI

    SEMI            shift and go to state 50


state 31

    (20) decl -> void ident . ( params ) pairs SEMI
    (22) decl -> void ident . ( params ) pairs statements

    (               shift and go to state 51


state 32

    (17) decl -> ENUM ( . type pairs ) { type_enums }
    (40) type -> . typestr
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 19
    type                           shift and go to state 52
    typestr                        shift and go to state 17

state 33

    (8) decl -> MACHINE ( . ident pairs ) : params { decls }
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 53

state 34

    (14) decl -> EXTERN_TYPE ( . type pairs ) SEMI
    (40) type -> . typestr
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 19
    type                           shift and go to state 54
    typestr                        shift and go to state 17

state 35

    (38) typestr -> typestr DOUBLE_COLON . ident
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 55

state 36

    (7) decl -> INCLUDE STRING . SEMI

    SEMI            shift and go to state 56


state 37

    (16) decl -> STRUCT ( . type pairs ) { type_members }
    (40) type -> . typestr
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 19
    type                           shift and go to state 57
    typestr                        shift and go to state 17

state 38

    (18) decl -> STATE_DECL ( . type pairs ) { type_states }
    (40) type -> . typestr
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 19
    type                           shift and go to state 58
    typestr                        shift and go to state 17

state 39

    (10) decl -> IN_PORT ( . ident , type , var pairs ) statements
    (59) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 59

state 40

    (15) decl -> GLOBAL ( type . pairs ) { type_members }
    (60) pairs -> . , pairsx
    (61) pairs -> . empty
    (2) empty -> .

    ,               shift and go to state 48
    )               reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 60
    empty                          shift and go to state 49

state 41

    (54) idents -> ident .

    ,               reduce using rule 54 (idents -> ident .)
    )               reduce using rule 54 (idents -> ident .)
    PROTOCOL        reduce using rule 54 (idents -> ident .)
    INCLUDE         reduce using rule 54 (idents -> ident .)
    MACHINE         reduce using rule 54 (idents -> ident .)
    ACTION          reduce using rule 54 (idents -> ident .)
    IN_PORT         reduce using rule 54 (idents -> ident .)
    OUT_PORT        reduce using rule 54 (idents -> ident .)
    TRANS           reduce using rule 54 (idents -> ident .)
    EXTERN_TYPE     reduce using rule 54 (idents -> ident .)
    GLOBAL          reduce using rule 54 (idents -> ident .)
    STRUCT          reduce using rule 54 (idents -> ident .)
    ENUM            reduce using rule 54 (idents -> ident .)
    STATE_DECL      reduce using rule 54 (idents -> ident .)
    VOID            reduce using rule 54 (idents -> ident .)
    IDENT           reduce using rule 54 (idents -> ident .)
    $end            reduce using rule 54 (idents -> ident .)
    }               reduce using rule 54 (idents -> ident .)


state 42

    (12) decl -> TRANS ( idents . , idents , ident pairs ) idents
    (13) decl -> TRANS ( idents . , idents pairs ) idents

    ,               shift and go to state 61


state 43

    (53) idents -> { . identx }
    (55) identx -> . ident SEMI identx
    (56) identx -> . ident , identx
    (57) identx -> . ident identx
    (58) identx -> . empty
    (59) ident -> . IDENT
    (2) empty -> .

    IDENT           shift and go to state 4
    }               reduce using rule 2 (empty -> .)

    ident                          shift and go to state 62
    identx                         shift and go to state 63
    empty                          shift and go to state 64

state 44

    (11) decl -> OUT_PORT ( ident . , type , var pairs ) SEMI

    ,               shift and go to state 65


state 45

    (9) decl -> ACTION ( ident . pairs ) statements
    (60) pairs -> . , pairsx
    (61) pairs -> . empty
    (2) empty -> .

    ,               shift and go to state 48
    )               reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 66
    empty                          shift and go to state 49

state 46

    (19) decl -> type ident pairs . SEMI

    SEMI            shift and go to state 67


state 47

    (21) decl -> type ident ( . params ) pairs SEMI
    (23) decl -> type ident ( . params ) pairs statements
    (44) params -> . param , params
    (45) params -> . param
    (46) params -> . empty
    (47) param -> . type ident
    (48) param -> . type STAR ident
    (49) param -> . type STAR ident = STRING
    (50) param -> . type ident = NUMBER
    (51) param -> . type ident = LIT_BOOL
    (52) param -> . type ident = STRING
    (2) empty -> .
    (40) type -> . typestr
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    )               reduce using rule 2 (empty -> .)
    IDENT           shift and go to state 4

    ident                          shift and go to state 19
    param                          shift and go to state 68
    params                         shift and go to state 69
    typestr                        shift and go to state 17
    type                           shift and go to state 70
    empty                          shift and go to state 71

state 48

    (60) pairs -> , . pairsx
    (62) pairsx -> . pair , pairsx
    (63) pairsx -> . pair
    (64) pair -> . ident = STRING
    (65) pair -> . ident = ident
    (66) pair -> . ident = NUMBER
    (67) pair -> . STRING
    (59) ident -> . IDENT

    STRING          shift and go to state 73
    IDENT           shift and go to state 4

    pair                           shift and go to state 75
    ident                          shift and go to state 72
    pairsx                         shift and go to state 74

state 49

    (61) pairs -> empty .

    )               reduce using rule 61 (pairs -> empty .)
    SEMI            reduce using rule 61 (pairs -> empty .)
    {               reduce using rule 61 (pairs -> empty .)


state 50

    (6) decl -> PROTOCOL STRING SEMI .

    PROTOCOL        reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    INCLUDE         reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    MACHINE         reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    ACTION          reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    IN_PORT         reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    OUT_PORT        reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    TRANS           reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    EXTERN_TYPE     reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    GLOBAL          reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    STRUCT          reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    ENUM            reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    STATE_DECL      reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    VOID            reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    IDENT           reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    $end            reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)
    }               reduce using rule 6 (decl -> PROTOCOL STRING SEMI .)


state 51

    (20) decl -> void ident ( . params ) pairs SEMI
    (22) decl -> void ident ( . params ) pairs statements
    (44) params -> . param , params
    (45) params -> . param
    (46) params -> . empty
    (47) param -> . type ident
    (48) param -> . type STAR ident
    (49) param -> . type STAR ident = STRING
    (50) param -> . type ident = NUMBER
    (51) param -> . type ident = LIT_BOOL
    (52) param -> . type ident = STRING
    (2) empty -> .
    (40) type -> . typestr
    (38) typestr -> . typestr DOUBLE_COLON ident
    (39) typestr -> . ident
    (59) ident -> . IDENT

    )               reduce using rule 2 (empty -> .)
    IDENT           shift and go to state 4

    ident                          shift and go to state 19
    param                          shift and go to state 68
    params                         shift and go to state 76
    typestr                        shift and go to state 17
    type                           shift and go to state 70
    empty                          shift and go to state 71

state 52

    (17) decl -> ENUM ( type . pairs ) { type_enums }
    (60) pairs -> . , pairsx
    (61) pairs -> . empty
    (2) empty -> .

    ,               shift and go to state 48
    )               reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 77
    empty                          shift and go to state 49

state 53

    (8) decl -> MACHINE ( ident . pairs ) : params { decls }
    (60) pairs -> . , pairsx
    (61) pairs -> . empty
    (2) empty -> .

    ,               shift and go to state 48
    )               reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 78
    empty                          shift and go to state 49

state 54

    (14) decl -> EXTERN_TYPE ( type . pairs ) SEMI
    (60) pairs -> . , pairsx
    (61) pairs -> . empty
    (2) empty -> .

    ,               shift and go to state 48
    )               reduce using rule 2 (empty -> .)
